BACKUP/recipies/nginx-with-traefik/nginx-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          image: nginx
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: nginx-html-volume
      volumes:
      - name: nginx-html-volume
        hostPath:
          path: /mnt/samba/volumes/nginxhtml
