BACKUP/recipies/nginx-with-traefik/nginx-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver

spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: webserver
